--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   build:
     commands:
       - echo Entered the build phase...
-      - mvn clean package
+      - mvn install
   post_build:
     commands:
       - echo Build completed successfully
