Master buildspec modifications
mvn clean package to mvn install
 mvn install to mvn test

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,5 +15,5 @@ phases:
       - echo Build completed successfully
 artifacts:
   files:
-    - target/order-service.jar
+    - target/OrderServiceApplication.java
   discard-paths: yes
