--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,10 +10,11 @@ phases:
   build:
     commands:
       - echo Entered the build phase...
+      - mvn clean package
   post_build:
     commands:
       - echo Build completed successfully
 artifacts:
   files:
-    - target/OrderServiceApplication.java
+    - target/order-service.jar
   discard-paths: yes
