--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,19 +1,14 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      java: corretto17
-  pre_build:
-    commands:
-      - echo Nothing to do in the pre_build phase...
   build:
     commands:
       - echo Entered the build phase...
-      - mvn clean
+      - mvn clean package
   post_build:
     commands:
       - echo Build completed successfully
 artifacts:
   files:
-    - '**/*'
+    - target/order-service.jar
+  discard-paths: yes
